[package]
name = "rusty_turtle"
version = "0.1.0"
authors = ["David Haynes <drh@mbpapps.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.14.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
